[package]
name = "tweet-media-to-discord"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = {version = "0.15"}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

serenity = {version = "0.12", features = ["builder", "client", "http"]}

tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread"]}

regex = "1"

reqwest = {version = "0.12", features = ["json"]}
