[package]
name = "tweet-media-to-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# 最小限のfeaturesで、cache/framework/chronoを除外してコンパイル時間とバイナリサイズを削減
serenity = {version = "0.12", default-features = false, features = ["builder", "client", "gateway", "model", "rustls_backend"]}

tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread"]}

regex = "1"

reqwest = {version = "0.12", features = ["json"]}
